--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
     width: 100%;
 }
 
-.second-fold{
+.second-fold {
     display: flex;
     justify-content: space-evenly;
     align-items: stretch;
@@ -29,18 +29,41 @@
     width: 100px;
 }
 
-.third-fold{
+.third-fold {
     background-color: lightpink;
     width: 100%;
 }
 
-.forth-fold{
+.forth-fold {
     background-color: lightgoldenrodyellow;
     width: 100%;
+    display: flex;
+    align-items: flex-end;
 }
 
-footer{
+footer {
     background-color: lightslategrey;
     width: 100%;
     height: 50px;
+}
+
+.nature-image {
+    width: 100%;
+    height: 200px;
+    border: none;
+    border-radius: 2px;
+}
+
+.nature-gif {
+    width: 100%;
+    height: 200px;
+    border: none;
+    border-radius: 2px;
+}
+
+@media only screen and (min-width: 1400px) {
+    .nature-gif, .nature-image {
+        width: 500px;
+        margin: 10px auto;
+    }
 }
