update dir structure & add layout 2

--- a/layouts/layout-1/layout-1.html
+++ b/layouts/layout-1/layout-1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="A responsive Web app"/>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="../../index.css" rel="stylesheet"/>
     <title>Responsive App with Images and Videos</title>
 </head>
 <body>
@@ -13,10 +13,10 @@
     <section class="second-fold">
         <aside class="left-bar"></aside>
         <section class="third-fold">
-            <img alt="Nature Image" src="nature.jpg" class="nature-image"/>
+            <img alt="Nature Image" src="../../assets/nature.jpg" class="nature-image"/>
         </section>
         <section class="forth-fold">
-            <img alt="Nature Gif" src="nature-calm.gif" class="nature-gif"/>
+            <img alt="Nature Gif" src="../../assets/nature-calm.gif" class="nature-gif"/>
         </section>
     </section>
     <footer></footer>
